--- a/backend/app/views/index_lookup.scala.html
+++ b/backend/app/views/index_lookup.scala.html
@@ -72,7 +72,7 @@
 
     <script>
         $(document).ready(function(){
-          Repertorise.doLookup("@repertory", "@symptom", "@page", "@remedyString", "@minWeight");
+          RepertoryView.doLookup("@repertory", "@symptom", "@page", "@remedyString", "@minWeight");
         });
     </script>
 
