--- a/backend/app/views/partial/about.scala.html
+++ b/backend/app/views/partial/about.scala.html
@@ -20,9 +20,9 @@
                       OOREP is an open online repertory for homeopathy.  It is open, because its source code is freely available,
                       it is online, because a running instance of it is served right here on this very server for your convenience.
                       It is NOT some kind of medical recommendation system - please read the disclaimer below.  Repertorisation is
-                      the looking up of homeopathic repertories, and as such this system does not provide any information, which
-                      you cannot obtain from its original sources.  However, online repertorisation is so much easier sometimes than
-                      looking up the categories yourself.
+                      the looking up of homeopathic repertories (and materia medicas), and as such this system does not provide any
+                      information, which you cannot obtain from its original sources.  However, online repertorisation is so much
+                      more efficient than browsing through the printed books.
                     </p>
                     <p>
                       A word from the author:
