--- a/backend/app/views/partial/features.scala.html
+++ b/backend/app/views/partial/features.scala.html
@@ -29,8 +29,8 @@
           <div class="icon" data-aos-delay="400" data-aos="fade" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600" data-aos-once="true">
             <img style="height:40px; width:50px;" src="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/icon-book.png" alt="book">
           </div>
-          <h4>Various repertories</h4>
-          <p>Repertorise using many of the well-known repertories like Kent, Boger, Hering, etc.</p>
+          <h4>Various sources</h4>
+          <p>Search in well-known repertories and materia medicas like Kent, Boger, Hering, etc.</p>
         </div>
         <div class="col-lg-4 col-sm-6">
           <div class="icon" data-aos-delay="400" data-aos="fade" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600" data-aos-once="true">
