--- a/backend/app/views/partial/impressum.scala.html
+++ b/backend/app/views/partial/impressum.scala.html
@@ -138,8 +138,6 @@
                 (v4.2.1, Copyright 2014-2021 Thomas Park, MIT-License)</li>
             <li><a href="https://jquery.com/">jquery</a>
                 (v3.3.1, Copyright JS Foundation and other contributors, MIT-License)</li>
-            <li><a href="https://popper.js.org/">popper</a>
-                (v1.15.0, Copyright 2018 Federico Zivolo, MIT-License)</li>
             <li><a href="https://useiconic.com/open">Open Iconic</a> font
                 (v1.1.1, MIT- and Open-Font-Licenses)</li>
             <li><a href="https://fonts.google.com/specimen/Open+Sans">Open Sans</a> font
@@ -155,16 +153,16 @@
             nicht diese Webseite selbst ist, auf den Rechner des Benutzers gelangen.
         </p>
 
-        <h3 class="freetext">Repertorien</h3>
+        <h3 class="freetext">Repertorien und Materia Medicas</h3>
 
         <p style="text-align:justify;">
             Obwohl OOREP freie Software im Sinne der GPL darstellt, behalten
-            wir uns das Recht vor, nicht alle Repertorien, die in dieser
+            wir uns das Recht vor, nicht alle Repertorien und Materia Medicas, die in dieser
             Server-Installation von OOREP zum Einsatz kommen, ebenfalls frei
-            verfügbar zu machen, zumal auch nicht alle Repertorien selbst
+            verfügbar zu machen, zumal auch nicht alle Repertorien und Materia Medicas selbst
             frei verfügbar sind und individuellen Urheberrechten
             unterliegen.  Im Einzelnen verwendet die Installation von OOREP
-            auf diesem Server die folgenden Repertorien:
+            auf diesem Server die folgenden Repertorien und Materia Medicas:
         </p>
 
         <ul>
@@ -173,6 +171,12 @@
             <!--      von <i>kent</i>). Copyright <b>Anahata Software</b>. Verwendet-->
             <!--      mit freundlicher Genehmigung von Paul Dupuy, Jr. vom 9. Februar-->
             <!--      2019.</li>-->
+
+            <li>allen: <b>H. C. Allen:</b> <i>Keynotes and Characteristics of some of the Leading Remedies of the Materia Medica</i>,
+                Boericke &amp; Tafel, New York (1899).</li>
+
+            <li>allentf: <b>T. F. Allen:</b> <i>The Encyclopedia of Pure Materia Medica</i>,
+                Boericke &amp; Tafel, New York (1874).</li>
 
             <li>boen [in Entwicklung]: <b>T. F. Allen</b>: <i>Boenninghausen's
                 Therapeutic Pocket Book</i>, The Hahnemann Publishing House, Philadelphia (1891).</li>
@@ -191,6 +195,9 @@
             <li>bogsk-de: Übersetzung von <i>bogsk</i> durch <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2020).
                 Verwendet mit freundlicher Genehmigung von <b>Andreas Maier</b>.
             </li>
+
+            <li>clarke: <b>J. H. Clarke:</b> <i>A Dictionary of Practical Materia Medica</i>,
+                The Homeopathic Publishing Company, London (1902).</li>
 
             <li>cowpert-de: Übersetzung des klinischen Indexes von <b>A. C. Cowperthwaite</b>s <i>Text-Book of Materia Medica and Therapeutics</i> (John B. Delbridge & Son, 1905)
                 durch <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2021).
@@ -224,7 +231,7 @@
         </ul>
 
         <p style="text-align:justify;">
-            Soweit nicht anders angegeben, wurden die Repertorien
+            Soweit nicht anders angegeben, wurden diese Bücher
             eigenständig aus den Originalquellen bzw. im Internet
             verfügbaren Scans, PDFs, etc. nach bestem Wissen und Gewissen
             extrahiert.  Für etwaige Fehler und Unsauberkeiten übernehmen wir
