--- a/backend/app/views/partial/navbar.scala.html
+++ b/backend/app/views/partial/navbar.scala.html
@@ -81,6 +81,10 @@
                     <div class="dropdown-menu" id="secNavBarRepertories"></div>
                 </li>
                 <li class="navbar-item dropdown">
+                    <a class="nav-link dropdown-toggle py-0" href="#" data-toggle="dropdown">Materia Medicas</a>
+                    <div class="dropdown-menu" id="secNavBarMMs"></div>
+                </li>
+                <li class="navbar-item dropdown">
                     <a class="nav-link dropdown-toggle py-0" href="#" data-toggle="dropdown">File</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="#" data-toggle="modal" data-target="#newFileModal">New...</a>
