--- a/backend/app/views/partial/pricing.scala.html
+++ b/backend/app/views/partial/pricing.scala.html
@@ -20,9 +20,9 @@
     
     <p style="text-align:justify;">
       However, we have decided to offer a subscription service with
-      OOREP in the future, which lets users access further repertories
+      OOREP in the future, which lets users access further repertories and materia medicas
       that are currently not offered on this web site or in the git
-      repository.  (The repertories hosted on this site are <b>not</b>
+      repository.  (The repertories and materia medicas hosted on this site are <b>not</b>
       all considered part of the OOREP software; for details, again,
       see the FAQ)! The subscription fee will not have to be paid for
       using the OOREP software - it is free afterall - but for using
