Remove misleading quotation marks

--- a/backend/app/views/partial/faq.scala.html
+++ b/backend/app/views/partial/faq.scala.html
@@ -272,7 +272,7 @@
 	<p style="text-align:justify;">
 		3. Especially in materia medica search, you may find that results are not
 		specific enough. For example, if you look for <i>swollen gums</i> as a symptom
-		then "gums, swollen" gets all sections that contain symptoms about the gums
+		then <tt>gums, swollen</tt> gets all sections that contain symptoms about the gums
 		and swellings, but not necessarily swollen gums. You can use <b>exact search</b>
 		with explicit <b>quotation marks</b> for that as follows:
 	</p>
