--- a/backend/app/views/index_static_content.scala.html
+++ b/backend/app/views/index_static_content.scala.html
@@ -26,11 +26,11 @@
 
   @if(org.multics.baueran.frep.backend.controllers.getAuthenticatedUser(request) == None) {
 
-    <script src="/assets/frontend-opt.js"></script>
+    <script async src="/assets/frontend-opt.js"></script>
 
   } else {
 
-    <script src="/assets/sec_frontend-opt.js"></script>
+    <script async src="/assets/sec_frontend-opt.js"></script>
 
   }
 
