--- a/backend/app/views/partial/impressum.scala.html
+++ b/backend/app/views/partial/impressum.scala.html
@@ -113,6 +113,7 @@
             <li>Apotheke: <a href="https://pixabay.com/photos/pharmacy-antique-old-chemicals-3377670/">Pixabay</a></li>
             <li>Englische Fahne: <a href="https://www.iconfinder.com/icons/16014/england_english_flag_great_britain_inghilterra_italia_uk_united_kingdom_icon">Iconfinder</a></li>
             <li>Laptop: <a href="https://webstockreview.net/image/clipart-computer-designer/1512299.html">WebStockReview</a></li>
+            <li>Vimeo-Logo: Extrahiert aus und verwendet in Übereinstimmung mit den <a href="https://vimeopr.gcs-web.com/brand-guidelines">Vimeo Brand Guidelines</a></li>
         </ul>
 
         <p style="text-align:justify;">
@@ -133,11 +134,11 @@
             <li><a href="https://github.com/michalsnik/aos">AOS</a>
                 (v2.3.4, Copyright Michal Sajnog, MIT-License)</li>
             <li><a href="https://getbootstrap.com/">bootstrap</a>
-                (v4.2.1, Copyright 2011-2018 The Bootstrap Authors, MIT-License)</li>
+                (v4.3.1, Copyright 2011-2018 The Bootstrap Authors, MIT-License)</li>
             <li><a href="https://bootswatch.com/">bootswatch</a>
-                (v4.2.1, Copyright 2014-2021 Thomas Park, MIT-License)</li>
+                (v4.3.1, Copyright 2014-2021 Thomas Park, MIT-License)</li>
             <li><a href="https://jquery.com/">jquery</a>
-                (v3.3.1, Copyright JS Foundation and other contributors, MIT-License)</li>
+                (v3.5.1, Copyright JS Foundation and other contributors, MIT-License)</li>
             <li><a href="https://useiconic.com/open">Open Iconic</a> font
                 (v1.1.1, MIT- and Open-Font-Licenses)</li>
             <li><a href="https://fonts.google.com/specimen/Open+Sans">Open Sans</a> font
