--- a/backend/app/views/index_landing.scala.html
+++ b/backend/app/views/index_landing.scala.html
@@ -13,7 +13,6 @@
   </head>
 
   <body>
-    <script>AOS.init();</script>
 
     @if(org.multics.baueran.frep.backend.controllers.getAuthenticatedUser(request) == None) {
       @partial.cookiepopup(org.multics.baueran.frep.backend.controllers.Get.staticServerUrl)
@@ -26,7 +25,7 @@
     <div id="temporary_content">
 
       <div style="width:100%;">
-        <div style="width:100%; margin-top:100px; margin-bottom:100px;" class="text-center">
+        <div style="width:100%; height: 80vh; margin-top:100px; margin-bottom:100px;" class="text-center">
           <h1 style="font-size:20pt;">
             <a href="@{org.multics.baueran.frep.backend.controllers.Get.staticServerUrl}/"><img src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/img/logo_small.png" width="180" height="65" alt="OOREP"></a>
             &nbsp; &middot; &nbsp; open online homeopathic repertory
@@ -39,9 +38,11 @@
 
     <div style="width:100%;" id="content"></div>
 
+    <script>AOS.init();</script>
+
     @if(org.multics.baueran.frep.backend.controllers.getAuthenticatedUser(request) == None) {
 
-      <script src="/assets/frontend-opt.js"></script>
+      <script async src="/assets/frontend-opt.js"></script>
 
       @partial.about()
 
@@ -49,7 +50,7 @@
 
     } else {
 
-      <script src="/assets/sec_frontend-opt.js"></script>
+      <script async src="/assets/sec_frontend-opt.js"></script>
 
     }
 
