--- a/backend/app/views/partial/header.scala.html
+++ b/backend/app/views/partial/header.scala.html
@@ -1,5 +1,9 @@
 @(title: String, theme: String)
 
+<link rel="preload" as="style" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/bootstrap-4.3.1/css/bootstrap.min.css" />
+<link rel="prefetch" as="style" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/bootstrap-4.3.1/css/bootstrap-darkly.min.css" />
+<link rel="preload" as="style" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/mystyle.css" />
+
 <meta charset="utf-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,17 +17,18 @@
 <meta name="description" content="Free online repertory of homeopathy that requires only a web browser to run. Features many of the classical repertories, such as Kent, Boger, Hering, etc." />
 <meta name="keywords" content="oorep, online, repertory, homeopathy, repertorization, kent" />
 
-<link id="darktheme" rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/bootstrap-4.2.1/css/bootstrap-darkly.min.css" @if(theme == "normal") { disabled }>
-<link id="normaltheme" rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/bootstrap-4.2.1/css/bootstrap.min.css" @if(theme == "dark") { disabled }>
+<link id="darktheme" rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/bootstrap-4.3.1/css/bootstrap-darkly.min.css" @if(theme == "normal") { disabled } />
+<link id="normaltheme" rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/bootstrap-4.3.1/css/bootstrap.min.css" @if(theme == "dark") { disabled } />
 
-<script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/jquery-3.3.1.min.js"></script>
+<script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/jquery-3.5.1.min.js"></script>
 
 <link rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/aos-master/dist/aos.css" />
 <script src="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/third-party/aos-master/dist/aos.js"></script>
 
-<link rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/mystyle.css">
+<link rel="stylesheet" href="@{org.multics.baueran.frep.backend.controllers.Get.staticAssetsPath}/mystyle.css" />
 
 <noscript>
+    <!-- https://github.com/michalsnik/aos/issues/81 -->
     <style>
         [data-aos] {
             opacity: 1 !important;
